# dotfiles

./: .Xresources  .alias  .alias.osx  .bash_profile  .bashrc  .gitignore  .gitignore_global  .gitmodules  .ideavimrc  .osx  .path  .tmux.conf  .travis.yml  .vim_kakbindings  .vimrc  .vimrc_bundles  .vimrc_vundle  .zsh-update  .zshrc  README.md  install.sh  setup_guest.sh  setup_nick.sh  verify_install.sh
.config/alacritty/: alacritty.linux.yml  alacritty.yml
.config/kak/: kakrc
.config/zellij/: config.kdl
.dotfiles_test/debian/: Dockerfile
.dotfiles_test/fedora/: Dockerfile
.gnupg/: gpg-agent.conf  gpg.conf
.i3/: config
.ideaconf/: .gitignore  editor.codeinsight.xml  editor.xml  filetypes.xml  gradle.run.settings.xml  ide.general.xml  ignore.xml  jdk.table.xml  other.xml  project.default.xml  scala.xml  scala_config.xml  vim_settings.xml
.ideaconf/_mac/: applicationLibraries.xml  path.macros.xml
.ideaconf/codestyles/: Default.xml
.ssh/: obsidyn.pub
.vim/: .netrwhist  .vimrc_bundles  setup.sh
aan/: .envrc  Cargo.toml
aan/.cargo/: config.toml
aan/src/: cli.rs  error.rs  git_graph.rs  git_watch.rs  lib.rs  watch_kit.rs
git/: .gitconfig  install.sh
home/: .alias  .bashrc  .gitignore  .path  install.sh
home/.i3/: config  (+1 more)
i3/: config  yabar.conf
nix/: .env.sample  .gitignore  apply-darwin.sh  apply-system.sh  apply-user.sh  flake.nix  nixos-zfs-install.sh
resources/: dbg.h
runcom/: .Xmodmap  .bash_profile  .bashrc  install.sh
system/: .alias  install.sh
vim/: .vimrc  .vimrc_bundles  .vimrc_vundle  install.sh  install_vimrc.sh
(+54 files in other folders)
