[package]
name = "aan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aan"
path = "src/bin/main.rs"

[dependencies]
blackhat = { version = "0.1.0", path = "/Users/nick/Documents/black-hat-rust-exercises/crates/blackhat" }
clap = { version = "4.1.4", features = ["derive"] }
clearscreen = "2.0.0"
color-eyre = "0.6.2"
dotenv = "0.15.0"
flume = "0.10.14"
git-repository = "0.33.0"
resolve-path = "0.1.0"
symlink = "0.1.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
watchexec = "2.1.0"
xshell = "0.2.3"
